
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct msghdr {int msg_iovlen; void* msg_controllen; scalar_t__ msg_control; struct iovec* msg_iov; } ;
struct iovec {char* iov_base; int iov_len; } ;
struct cmsghdr {int cmsg_type; int cmsg_level; void* cmsg_len; } ;
typedef scalar_t__ caddr_t ;


 int CMSG_DATA (struct cmsghdr*) ;
 struct cmsghdr* CMSG_FIRSTHDR (struct msghdr*) ;
 void* CMSG_LEN (int) ;
 int CMSG_SPACE (int) ;
 int SCM_RIGHTS ;
 int SOL_SOCKET ;
 int close (int) ;
 int memmove (int ,int*,int) ;
 int memset (struct msghdr*,int ,int) ;
 int sendmsg (int,struct msghdr*,int ) ;

int send_fd(int sock, int fd)
{
 char buf[1];
 struct iovec iov;
 struct msghdr msg;
 struct cmsghdr *cmsg;
 int n;
 char cms[CMSG_SPACE(sizeof(int))];

 buf[0] = 0;
 iov.iov_base = buf;
 iov.iov_len = 1;

 memset(&msg, 0, sizeof msg);
 msg.msg_iov = &iov;
 msg.msg_iovlen = 1;
 msg.msg_control = (caddr_t)cms;
 msg.msg_controllen = CMSG_LEN(sizeof(int));

 cmsg = CMSG_FIRSTHDR(&msg);
 cmsg->cmsg_len = CMSG_LEN(sizeof(int));
 cmsg->cmsg_level = SOL_SOCKET;
 cmsg->cmsg_type = SCM_RIGHTS;
 memmove(CMSG_DATA(cmsg), &fd, sizeof(int));

 if ((n = sendmsg(sock, &msg, 0)) != iov.iov_len)
  return -1;
 close(sock);
 return 0;
}
